--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "fxml",
   "version": "0.1.0",
   "description": "Node.js XML to JSON",
-  "main": "index.js",
-  "types": "types/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "private": false,
   "gypfile": true,
   "scripts": {
-    "clean": "rm -rf build/ node_modules/",
-    "postinstall": "npx node-gyp rebuild",
-    "test": "npx mocha"
+    "clean": "rm -rf build/ node_modules/ dist/",
+    "postinstall": "npx tsc && npx node-gyp rebuild && mkdir -p dist/build/Release && cp ./build/Release/fxml.node dist/build/Release/",
+    "test": "npx mocha test/**/*.spec.ts"
   },
   "files": [
     "src",
@@ -19,18 +19,21 @@
   ],
   "dependencies": {
     "cmake-js": "^7.3.0",
-    "nan": "^2.18.0"
+    "nan": "^2.18.0",
+    "typescript": "^5.7.2"
   },
   "directories": {
     "test": "test"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.10",
     "@types/node": "^10.12.18",
-    "mocha": "^8.3.0"
+    "mocha": "^8.3.0",
+    "tsx": "^4.19.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/damirn/rapidx2j.git"
+    "url": "https://github.com/eitanwass/fxml.git"
   },
   "keywords": [
     "rapidxml",
@@ -39,10 +42,10 @@
     "parsing",
     "addon"
   ],
-  "author": "Damir Nedžibović <damirn@gmail.com>",
+  "author": "Ethan Wass <eitanwass@gmail.com>",
   "license": "MIT OR BSL-1.0",
   "bugs": {
-    "url": "https://github.com/damirn/rapidx2j/issues"
+    "url": "https://github.com/eitanwass/fxml/issues"
   },
-  "homepage": "https://github.com/damirn/rapidx2j"
+  "homepage": "https://github.com/eitanwass/fxml"
 }
